# pyAVL

./: .cirrus.yml  .gitignore  404.html  LICENSE.txt  Makefile  README  README.md  find_cross_file.sh  find_native_file.sh  hello_omp_world.cpp  hello_omp_world.f  index.html  meson.build  mkdocs.yml  pyproject.toml  setup.py  setup_deprecated.py
.github/workflows/: docs.yml  wheels.yml
analysis/: index.html
config/: config.LINUX_GFORTRAN.mk
config/defaults/: config.LINUX_GFORTRAN.mk
dev_docs/: index.html
docs/: analysis.md  avl_changes.md  dev_docs.md  doc_string_tmpl.mustache  gen_ref_pages.py  index.md  input.md  installation.md  limitations.md  optimization.md  parameter_sweeps.md  pyavl_changes.md  usage.md
examples/aircraft/: aircraft.avl  aircraft.txt  plot_aircraft.py  plot_lift_dist.py  plot_sectional_data.py  run_derivs.py  run_modes.py  run_opt.py  run_opt_custom_param.py  run_opt_multipoint.py  run_opt_om.py  run_opt_scipy.py  run_opt_trim_scipy.py  run_param_sweep.py  run_write_io.py  run_write_tecplot.py  simple_run.py
examples/supra/: run_analysis.py  supra.avl
installation/: index.html
optimization/: index.html
optvl/: MExt.py  __init__.py  om_wrapper.py  optvl_class.py
parameter_sweeps/: index.html
pyavl/: MExt.py  __init__.py  om_warpper.py  om_wrapper.py  pyAVL.py
python/: aircraft.txt  aircraft_exp.txt  pyAVL.py  test_API.py
reference/SUMMARY/: index.html
search/: search_index.json
src/: AVL.INC  Makefile  aero.f  aic.f  ainput.f  aio.f  airutil.f  amake.f  amass.f  amode.f  aoml.f  aoper.f  aoutmrf.f  aoutput.f  aplotmd.f~  asetup.f  atime.f  atpforc.f  atrim.f  avl.f  create_avl_inc.py  dtest.f  eispack.f  eispack_new.f  getvm.f  grab-all-fortran-files.py  libavl.pyf  matrix-lapack.f  matrix-lapackdp.f  matrix.f  pyavl.pyf  sgutil.f  unitset.f  userio.f
src/ad_src/: Makefile_tapenade  analytic_derivs.f
src/ad_src/ADFirstAidKit/: adBuffer.f  debugAD.f  debugAD.inc
src/ad_src/ad_utils/: edit_ad_src.py
src/ad_src/forward_ad_src/: AINDEX_d.inc  AVL_d.inc  aero_d.f  aic_d.f  amake_d.f  amode_d.f  aoper_d.f  asetup_d.f  atpforc_d.f  cdcl_d.f  sgutil_d.f
src/ad_src/reverse_ad_src/: aero_b.f  aic_b.f  amake_b.f  amode_b.f  aoper_b.f  asetup_b.f  atpforc_b.f  cdcl_b.f  sgutil_b.f
src/f2py/: libavl.pyf
src/includes/: AVL.INC  AVL.INC.in  AVLPLT.INC  AVL_ad_seeds.f  AVL_ad_seeds.inc  AVL_kinds.INC  gen_ad_inc.py  test.f  test_diff.f
src/lapack/: iparam2stage.f
src/src_with_prints/: AVL.INC  amode.f  aoper.f  atrim.f  avl.f  pyavl.pyf
tests/: aircraft.avl  aircraft.mass  aircraft_L1.avl  aircraft_L1_trans.avl  aircraft_mod.avl  rect.avl  supra.avl  test_analysis.py  test_consurf_partial_derivs.py  test_contraints.py  test_derivs.py  test_derivs_api.py  test_eigen_analysis.py  test_import.py  test_io.py  test_new_subroutines.py  test_om_wrapper.py  test_parameters.py  test_partial_derivs.py  test_stab_derivs.py  test_stab_derivs_partial_derivs.py  test_surf_geom.py  test_tear_down.py  test_total_derivs.py
tools/wheels/: cibw_before_build_linux.sh  cibw_before_build_macos.sh  cibw_before_build_win.sh  cibw_test_command.sh  move_wheels.sh  repair_windows.sh
usage/: index.html
